# step

./: bs4scraper_sinc.py.patch  pyproject.toml
scrapers/: bs4_lesson.py
scrapers/async_parsers/: async_parser.py  async_parser_main.py
scrapers/sinc/: bs4scraper_sinc.py  bs4scraper_sinc_main.py
scrapers/tests/: test_AsyncParser.py
