[tool.poetry]
name = "stepik"
version = "0.1.0"
description = "Курсы на платформе stepik"
authors = ["egorgavrilov <Egor4it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiofiles = "^24.1.0"
aiohttp = "^3.10.5"
fake-useragent = "^1.5.1"
bs4 = "^0.0.2"
lxml = "^5.3.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
tqdm = "^4.66.5"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
asyncio_default_fixture_loop_scope = "function"
